# factory

./: .gitignore  Dockerfile  README.md  app.py  app_v2.py  docker-compose.yml  download_models.sh  log.conf  nginx.conf  pyproject.toml  webapi-test.ipynb
demos/: i2i.py  llm_chat.py  notebooklm.py  tts-demo.ipynb  voice-assistant-demo.ipynb  webapi-demo.ipynb
demos/dnd/: README.md  campaign_state.json
demos/dnd/dnd/: __main__.py  client.py
factory/: config.py  models.py  utils.py
factory/api/: models.py
factory/ml/: __init__.py  manager.py  models.py  pipelines.py
factory/ml/pipelines/: __init__.py  audio2text.py  general.py  image2image.py  text2image.py  text2speech.py  text2text.py
factory/ml/pipelines/utils/: bark_api.py  bark_generation.py  bark_model_fine.py
factory/vendors/kokoro/: models.py
models/: SG161222_Realistic_Vision_V4.0_noVAE.json  model_manager.yaml  model_manager_full.yaml  philipp-zettl_margot_robbie-lora.json  philipp-zettl_ssd-jon_juarez-lora.json  small-sd.json  tiny-sd.json
models/configs/: SG161222_Realistic_Vision_V4.0_noVAE.json  SG161222_Realistic_Vision_V5.1_noVAE.json  philipp-zettl_ssd-margot_robbie-lora.json  ssd-1b.json  stable-diffusion-onnx.json  stable-diffusion.json
models/configs/controlnet/: lllyasviel_sd-controlnet-canny.json  monster-labs_control_v1p_sd15_qrcode_monster.json
models/tts/: README.md  en_speaker_6_coarse_prompt.npy  en_speaker_6_fine_prompt.npy
scripts/: build_lora_dataset.py  gen_request.py
train/: .gitignore  Untitled.ipynb  train-lora.ipynb
